--- a/Preentrega1/index.html
+++ b/Preentrega1/index.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Conversor de Moneda</h1>
 
+  <label for="cantidad">Cantidad:</label>
+  <input type="number" id="cantidad" />
+
+  <label for="monedaOrigen">Moneda de origen:</label>
+  <input type="text" id="monedaOrigen" />
+
+  <label for="monedaDestino">Moneda de destino:</label>
+  <input type="text" id="monedaDestino" />
+
+  <button id="convertirButton">Convertir</button>
+
+  <h3 id="resultado"></h3>
 
     <script src="js/script.js"></script>
 </body>
